--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:design:26.1.0'
     compile 'com.google.firebase:firebase-database:9.0.2'
     compile "com.google.firebase:firebase-auth:9.0.2"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
