--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,10 @@ android {
 dependencies {
     implementation 'com.android.support:design:26.1.0'
     compile 'com.google.firebase:firebase-database:9.0.2'
-    compile "com.google.firebase:firebase-auth:9.0.2"
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.google.firebase:firebase-auth:9.0.2'
+    compile 'org.twitter4j:twitter4j-core:4.0.4'
+    compile 'org.twitter4j:twitter4j-stream:4.0.4'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
