--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="1996674077241804"/>
+
         <activity android:name=".CurrencyActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity"></activity>
