--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,16 +21,20 @@ android {
 
 dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    implementation 'com.android.support:design:26.1.0'
     compile 'com.google.firebase:firebase-database:9.0.2'
     compile 'com.google.firebase:firebase-auth:9.0.2'
     compile 'org.twitter4j:twitter4j-core:4.0.4'
     compile 'org.twitter4j:twitter4j-stream:4.0.4'
+    compile 'com.jjoe64:graphview:4.2.1'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation files('libs/jcommon-1.0.23.jar')
+    implementation files('libs/jfreechart-1.0.19')
 }
 
 apply plugin: 'com.google.gms.google-services'
